tests/str_format_arg_type_s_bad.hop
// Verifies string format argument type s is rejected.
fn main() {
	var s *str = format("x={s}", 1 as i64)
	del s
}
